<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8DF"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="casual"
            android:text="@string/tripmate"
            android:textAllCaps="false"
            android:textColor="#FB6A34"
            android:textSize="58sp"
            android:textStyle="bold" />

        <!-- Snippet from "Add text fields" section goes here. -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/enter_your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/antic"
                android:background="@drawable/round_text"
                android:textColor="@color/black"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/enter_your_password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:background="@drawable/round_text"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Snippet from "Add buttons" section goes here. -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/antic"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/antic"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#333333"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTintMode="screen" />

    </LinearLayout>


</ScrollView>